--- a/books/deep-learning-with-python/2.1 A first look at a neural network.ipynb
+++ b/books/deep-learning-with-python/2.1 A first look at a neural network.ipynb
@@ -100,21 +100,21 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "60000/60000 [==============================] - 17s 284us/step - loss: 0.2821 - acc: 0.9181\n",
+      "60000/60000 [==============================] - 7s 124us/step - loss: 0.2708 - acc: 0.9195\n",
       "Epoch 2/5\n",
-      "60000/60000 [==============================] - 16s 264us/step - loss: 0.1303 - acc: 0.9608\n",
+      "60000/60000 [==============================] - 7s 121us/step - loss: 0.1253 - acc: 0.9624\n",
       "Epoch 3/5\n",
-      "60000/60000 [==============================] - 16s 265us/step - loss: 0.0931 - acc: 0.9718\n",
+      "60000/60000 [==============================] - 7s 123us/step - loss: 0.0917 - acc: 0.9725\n",
       "Epoch 4/5\n",
-      "60000/60000 [==============================] - 16s 270us/step - loss: 0.0747 - acc: 0.9777\n",
+      "60000/60000 [==============================] - 7s 123us/step - loss: 0.0718 - acc: 0.9780\n",
       "Epoch 5/5\n",
-      "60000/60000 [==============================] - 16s 274us/step - loss: 0.0604 - acc: 0.9810\n"
+      "60000/60000 [==============================] - 8s 130us/step - loss: 0.0607 - acc: 0.9812\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f36c4e6cf60>"
+       "<keras.callbacks.History at 0x7f50aa76de48>"
       ]
      },
      "execution_count": 7,
@@ -128,15 +128,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 1s 129us/step\n",
-      "test_acc: 0.9666\n"
+      "10000/10000 [==============================] - 1s 63us/step\n",
+      "test_acc: 0.9772\n"
      ]
     }
    ],
